# 3DViewer_v2.0

./: README.md
src/: Doxyfile  Makefile  gif.cc  main.cc  test.cc
src/controller/: controller.h
src/doc/: REPORT.md
src/model/: facade.h  parser.cc  parser.h  texture.h  transform.cc  transform.h
src/view/: CMakeLists.txt  glview.cc  glview.h  mainwindow.cc  mainwindow.h  mainwindow.ui  settings.cc  settings.h
